# recipes

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/actions/: setup-rust.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml
resources/: sample-config.toml
scripts/: check
setup/: create_tables.sql  sample_data.sql
src/: api.rs  config.rs  database.rs  frontend.rs  main.rs  models.rs  util.rs
src/api/: constants.rs  recipes.rs  routes.rs  utils.rs
src/api/recipes/: ingredient.rs  recipe.rs  routes.rs
src/api/routes/: categories.rs  ingredients.rs  recipes.rs
src/api/routes/recipes/: versions.rs
src/database/: error.rs  migrator.rs  modelcache.rs  transaction.rs  types.rs
src/frontend/: routes.rs
src/models/: category.rs  ingredient.rs  model.rs  modelref.rs  recipe.rs  recipeversion.rs
