[package]
name = "recipes"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.6.18"
chrono = "0.4.26"
log = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
simplelog = "0.12.1"
sqlx = { version = "0.6", features = ["any", "runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
toml = "0.7.4"
