[package]
name = "recipes"
version = "0.1.0"
description = "A web server for creating, editing, and viewing your recipes"
repository = "https://github.com/thomasebsmith/recipes"
readme = "README.md"
edition = "2021"
license = "MIT"
keywords = ["web-server"]
categories = ["web-programming::http-server"]

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
log = { version = "0.4.20", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
simplelog = "0.12.1"
sqlx = { version = "0.7", features = ["any", "runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.10"
